refactor: remove plan for testing

--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,6 @@ runs:
       run: |
         make plan
 
-    - name: Appy
-      run: |
-        make apply
+    #- name: Appy
+    #  run: |
+    #    make apply
